--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Titillium+Web:wght@200&display=swap');
 
 body{
-    background: linear-gradient(120deg, #5f57d1, #c065c0);
+    background: linear-gradient(120deg, #5f57d1, #c065c0) no-repeat center center fixed;
     font-family: 'Lato', sans-serif;
-    min-height: 921px;
     background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 .main-container{
     display: flex;
@@ -13,10 +16,21 @@ body{
     align-items: center;
 }
 
+.title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 h4{
     color: white;
     font-size: 50px;
 }
+
+.to-do-task-all{
+    margin-top: 60px;
+}
+
+
 
 
 .add-new-task-container{
@@ -33,7 +47,7 @@ h4{
 }
 
 .new-task-input{
-    font-size: 25px;
+    font-size: 18px;
     width: 300px;
     height: 40px;
     background-color: #482F65;
@@ -66,8 +80,8 @@ h4{
 
 .add-btn{
     color:white;
-    font-size: 20px;
-    background-color: #949393ba;
+    font-size: 18px;
+    background-color: #482F65;
     outline: none;
     border: none;
     height: 40px;
@@ -77,10 +91,14 @@ h4{
     opacity: .9;
 }
 
+.add-btn:hover{
+    cursor: pointer; 
+}
+
 
 .nav-toggle{
     color:white;
-    font-size: 30px;
+    font-size: 18px;
     background-color: #482F65;
     outline: none;
     border: none;
@@ -88,11 +106,15 @@ h4{
     width: 50px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-    opacity: .6;
+    opacity: .9;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
+    transition: all 0.3s linear;
+}
 
+.nav-toggle:hover{
+    cursor: pointer; 
 }
 
 
@@ -108,11 +130,22 @@ h4{
     overflow: hidden;
     list-style: none;
     padding: 0px;
+    transition: height 0.8s;
+    margin: 0px;
+    width: 170px;
   }
   .show-links {
-    height: 10rem;
+    height: 7rem;
     margin: 0px;
   }
+
+
+.i{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+}
 
   .nav-center {
     max-width: 1170px;
@@ -136,18 +169,81 @@ h4{
       font-size: 18px;
       display: flex;
       align-items: center;
+      transition: transform 0.5s;
+  }
 
+  .all-tasks-btn:hover, .completed-tasks-btn:hover, .deleted-tasks-btn:hover{
+    transform: translateX(5px);
+    transition: transform 0.5s;
+    cursor: pointer;
   }
 
   .task{
       display: flex;
       flex-direction: row;
       align-items: center;
+      height: 70px;
+  }
+  .task b{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 40px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+
+}
+
+.task-show-copmleted {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 70px;
+}
+
+.task-show-copmleted b {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 40px;
+    border-top: solid 1px #499B53;
+    border-left: solid 1px #499B53;
+    border-bottom: solid 1px #499B53;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.task-show-deleted{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 70px;
+}
+
+.task-show-deleted b {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 40px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-top: solid 1px red;
+    border-bottom: solid 1px red;
+    border-left: solid 1px red;
+}
+
+
+  .task-completed{
+    box-shadow: 0px 0px 10px 0px #499B53;
+    border-top-left-radius: 10px;
+      border-bottom-left-radius: 10px;
+      border-top-right-radius: 10px;
+      border-bottom-right-radius: 10px;
   }
 
   .paragraph{
     color:white;
-    font-size: 25px;
+    font-size: 18px;
     background-color: #482F65;
     outline: none;
     border: none;
@@ -163,7 +259,7 @@ h4{
 
   .edit-btn, .completed-btn, .deleted-btn{
     color:white;
-    font-size: 20px;
+    font-size: 18px;
     background-color: #482F65;
     outline: none;
     border: none;
@@ -171,7 +267,7 @@ h4{
     width: 50px;
     opacity: .6;
     border-left: solid 2px;
-      border-color: #65428da0;
+    border-color: #65428da0;
   }
 
   .edit-btn{
@@ -179,15 +275,219 @@ h4{
       border-bottom-right-radius: 10px;
   }
 
-  /* .fa-check{
-      color: rgb(4, 197, 4);
+
+  .remove-btn, .deleted-btn-forever{
+    color:white;
+    font-size: 18px;
+    background-color: #482F65;
+    outline: none;
+    border: none;
+    height: 40px;
+    width: 75px;
+    opacity: .6;
+    border-left: solid 2px;
+    border-color: #65428da0;
+
   }
 
-  .fa-trash-alt{
-      color: rgba(255, 0, 0, 0.765);
-  }
-  .fa-edit{
-      color: rgba(255, 255, 0, 0.834);
-  } */
 
-  
+.deleted-btn-forever{
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.delete-all-btn{
+    width: 104px;
+    height: 45px;
+    background-color: #B83268;
+    border: none;
+    color: white;
+    font-size: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.close-all-btn{
+    width: 100px;
+}
+
+.close-all-btn-container{
+    width: 100px;
+}
+
+@media all and (max-width: 720px){
+    h4{
+        color: white;
+        font-size: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .new-task-input{
+        font-size: 13px;
+        width: 154px;
+        height: 35px;
+        background-color: #482F65;
+        outline: none;
+        border: none;
+        padding: 0px 10px;
+        color: white;
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+        opacity: .6;
+    }
+    .select-task-done-or-delete{
+        margin: 0px;
+        font-size: 13px;
+        width: 62px;
+        height: 35px;
+        background-color: #482F65;
+        outline: none;
+        border: none;
+        padding: 0px 10px;
+        color: white;
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+        opacity: .6;
+        display: flex;
+        align-items: center;
+    }
+    
+    .add-btn{
+        color:white;
+        font-size: 18px;
+        background-color: #482F65;
+        outline: none;
+        border: none;
+        height: 35px;
+        width: 50px;
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
+        opacity: .9;
+    }
+    
+    .add-btn:hover{
+        cursor: pointer; 
+    }
+    
+    
+    .nav-toggle{
+        color:white;
+        font-size: 18px;
+        background-color: #482F65;
+        outline: none;
+        border: none;
+        height: 35px;
+        width: 35px;
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
+        opacity: .9;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: all 0.3s linear;
+    }
+    
+    .nav-toggle:hover{
+        cursor: pointer; 
+    }
+    .nav-header {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    
+    .add-new-task-container{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 5px;
+    }
+    .all-tasks-btn, .completed-tasks-btn, .deleted-tasks-btn{
+        background-color: #482F65;
+        opacity: 0.6;
+        width: 119px;
+        height: 35px;
+        border-radius: 10px;
+        outline: none;
+        border: none;
+        color: white;
+        margin: 0px;
+        font-size: 15px;
+        display: flex;
+        align-items: center;
+        transition: transform 0.5s;
+    }
+    .links {
+        height: 0;
+        overflow: hidden;
+        list-style: none;
+        padding: 0px;
+        transition: height 0.8s;
+        margin: 0px;
+        width: 162px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      .show-links {
+        height: 7rem;
+        margin: 0px;
+      }
+      .paragraph{
+        color:white;
+        font-size: 13px;
+        background-color: #482F65;
+        outline: none;
+        border: none;
+        height: 35px;
+        width: 213px;
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+        opacity: .6;
+        padding-left: 10px;
+        display: flex;
+        align-items: center;
+      }
+      .task{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        height: 70px;
+        width: 391px;
+    }
+    .edit-btn, .completed-btn, .deleted-btn{
+        color:white;
+        font-size: 15px;
+        background-color: #482F65;
+        outline: none;
+        border: none;
+        height: 35px;
+        width: 50px;
+        opacity: .6;
+        border-left: solid 2px;
+        border-color: #65428da0;
+      }
+      .remove-btn, .deleted-btn-forever{
+        color:white;
+        font-size: 15px;
+        background-color: #482F65;
+        outline: none;
+        border: none;
+        height: 35px;
+        width: 73px;
+        opacity: .6;
+        border-left: solid 2px;
+        border-color: #65428da0;
+    
+      }
+      .main-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-left: 26px;
+    }
+}
